--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <meta
+      name="description"
+      content="Компания ОКОШКО всегда поможет Вам выбрать и заказать металлопластиковое окно. Обеспечим замер и гарантируем качественный монтаж окон. Знаете размеры окна - можно самостоятельно рассчитать стоимость и оформить заказ online. +38-067-257-55-10"
+    />
+    <meta
+      name="keywords"
+      content="пластиковые, металлопластиковые, окна, пвх, купить, цена, недорого, конструкции, двери, замер, монтаж, рассчитать, заказать, окна днепр, окна киев, вікна київ, вікна, замовити, двері, ціна, вартість, розрахувати"
+    />
+    <title>
+      ОКОШКО | Металлопластиковые окна (ПВХ) по выгодным ценам в Украине
+    </title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
