changed fonts, changed descriptions, added axios request and other minor fixes

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="ua">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,14 +7,14 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <meta
       name="description"
-      content="Компания ОКОШКО всегда поможет Вам выбрать и заказать металлопластиковое окно. Обеспечим замер и гарантируем качественный монтаж окон. Знаете размеры окна - можно самостоятельно рассчитать стоимость и оформить заказ online. +38-067-257-55-10"
+      content="Компанія ОКОШКО завжди допоможе Вам вибрати та замовити металопластикове вікно. Забезпечимо замір та гарантуємо якісний монтаж вікон. +38-067-257-55-10"
     />
     <meta
       name="keywords"
-      content="пластиковые, металлопластиковые, окна, пвх, купить, цена, недорого, конструкции, двери, замер, монтаж, рассчитать, заказать, окна днепр, окна киев, вікна київ, вікна, замовити, двері, ціна, вартість, розрахувати"
+      content="пластикові, металопластикові, вікна, пвх, купити, ціна, недорого, конструкції, двері, вимір, монтаж, розрахувати, замовити, вікна дніпро, вікна київ, вікна, замовити, двері, ціна, вартість, розрахувати"
     />
     <title>
-      ОКОШКО | Металлопластиковые окна (ПВХ) по выгодным ценам в Украине
+      ОКОШКО | Металопластикові вікна (ПВХ) за вигідними цінами в Україні
     </title>
   </head>
   <body>
@@ -26,6 +26,9 @@
       >
     </noscript>
     <div id="app"></div>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+    </style>
     <!-- built files will be auto injected -->
   </body>
 </html>
